apps/production-planning/production-planning.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: production-planning
  labels:
    app: production-planning
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: production-planning
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: production-planning
  labels:
    app: production-planning
spec:
  replicas: 1
  selector:
    matchLabels:
      app: production-planning
  template:
    metadata:
      labels:
        app: production-planning
    spec:
      containers:
        - name: production-planning
          image: "docker.io/burrsutter/hello:1.0.0"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
