apps/production-planning/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: production-planning
  labels:
    app: production-planning
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: production-planning
